fix: add wrapping style classes

--- a/src/style.scss
+++ b/src/style.scss
@@ -10,3 +10,19 @@
 	color: #fff;
 	padding: 2px;
 }
+
+.wp-block-search__inside-wrapper {
+	border: 1px solid #87B1D7;
+}
+
+.wp-block-search__inside-wrapper.bb-search {
+
+}
+
+.wp-block-search__inside-wrapper.bb-year {
+
+}
+
+.wp-block-search__inside-wrapper.bb-sort {
+
+}
